   and skeleton files for you.  This makes it much faster to get a new 
   blog up and running.  It works like this::

      pyblcmd --create <path>

   For example::

      pyblcmd --create /home/joe/blog

4. The entry cache drivers have been removed from PyBlosxom core.  If
   you were using entryshelf or entrypickle, you'll need to pick up
   their plugin replacements.


Pertinent to developers:
------------------------

1. We're cleaning up a lot of code in PyBlosxom.  This will definitely
   affect plugins.  Some will work fine and some will not.  We hope
   to provide a list of things you'll need to do to update your plugin
   for PyBlosxom 2.0 while continuing to work with PyBlosxom 1.4.  See
   the documentation on the web-site for details.


Changes between 1.4.1 and 1.4.2
===============================

Pertinent to users:

1. Fixed another bug with the WSGI application creation code.  (Thanks
   Christine!)

2. Added instructions for installing PyBlosxom with mod_wsgi to
   ``install_wsgi.txt``.  This includes a basic wsgi script for PyBlosxom.
   (Thanks Christine!)

3. Fixed up the Python Paste installation document.  (Thanks Liz!)

4. Fixed the ``month2num`` code in tools so that PyBlosxom runs on 
   Windows (Windows doesn't have ``nl_langinfo`` in the ``locale`` 
   module).  (Thanks Liz!)


Changes between 1.4 and 1.4.1
=============================

Pertinent to users:

1. Fixed a problem where running PyBlosxom under Paste won't pick up
   the ``config.py`` file.  Be sure to add a ``configpydir`` property to
   your ``blog.ini`` file which points to the directory your ``config.py``
   file is in.

   .. Note:: 

      You have to set this even if ``config.py`` is in the same directory 
      as your ``blog.ini`` file.


2. Fixed a problem where running PyBlosxom in Python 2.5 won't pick up
   the ``config.py`` file.

3. Merged Ryan's optimization to Walk (removes an os.listdir call).

4. Updated documentation.


Changes between 1.3.2 and 1.4